# c11parser_cxx

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/declarator/: context.h  declarator.h
src/grammar/: CMakeLists.txt  c11parser.bison.y  c11parser.flex.l
src/lexer/: CMakeLists.txt  c11parser_guard_flexlexer.h  c11parser_lexer.gtest.cpp  c11parser_lexer.h
src/parser/: CMakeLists.txt  c11parser.gtest.cpp
src/tools/: replace_tokens_with_aliases.sh
